--- a/style.css
+++ b/style.css
@@ -8663,8 +8663,8 @@ ul {
     box-shadow: 0 0 0;
     border-radius: 0;
     background: #fff;
-    text-transform: uppercase;
-    color: #fff;
+    text-transform: capitalize;
+    color: #454545;
     height: 34px;
     border-top: 1px solid #f1f1f1;
     border-left: 1px solid #f1f1f1;
@@ -9498,6 +9498,7 @@ xcustom form elements
   display: block;
   position: absolute;
   top: 50%;
+  left: 0;
   -webkit-transform: translateY(-50%);
   -moz-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
